classDiagram

    direction LR

    class Truss {
        +AddNode(...) Node
        +AddRod(...) Rod
        +Solve() void
    }

    class Node {
        +Name: string
        +InitialX: double
        +InitialY: double
        +InitialZ: double
        +FixX: boolean
        +FixY: boolean
        +FixZ: boolean
        +ForceX: double
        +ForceY: double
        +ForceZ: double
        +DisplacementX: double
        +DisplacementY: double
        +DisplacementZ: double
    }
    
    class Rod {
        +Elasticity: double
        +Area: double
        +Length: double
        +Force: double
    }

    Truss o--"*" Node: Nodes
    Truss o--"*" Rod: Rods

    Rod -->"1" Node: NodeA
    Rod -->"1" Node: NodeB